# open-codex-micro

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ar.md  README.es.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: BUILD-CHECKLIST.md  PROFILES.md  design.md
examples/: profile-editor.json
firmware/circuitpython/: README.md  code.py  config.py
firmware/circuitpython/lib/: README.md
hardware/: README.md
host/: __init__.py  open_codex_bridge.py  requirements.txt
